refactor: modernize codebase with Java 25 and Spring Boot 4 best practices
- Convert ModelInfo to Java 25 record with @Builder
- Add type-safe config records: AwsProperties, MailgunProperties, AppProperties
- Replace RestTemplate with RestClient in EmailService
- Add InvocationResult record in TextGenerationService replacing String[]
- Use pattern matching switch, var, unnamed variables, SequencedCollection
- Modernize filters with pattern matching instanceof
- Add explicit JacksonConfig (SB4 webmvc no longer auto-configures ObjectMapper)
- Replace spring-boot-starter-mail with spring-boot-starter-json
- Use Set.of/List.of for immutable collections in filters and catalog